--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^6.0.1",
     "http-status-codes": "^2.2.0",
-    "mongoose": "^6.8.4"
+    "mongoose": "^6.8.4",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
